--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@
 
 .jumbotron {
     width: 30wh;
-    height: 30vh;
     color: #fff;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
@@ -53,6 +52,10 @@
         background-position: 0% 50%;
     }
 }
+
+
+
+
 .nav-tabs {
     position: fixed;
     width: 100%;
@@ -150,3 +153,20 @@
     padding-bottom: 5px;
     border-radius: 15px;
 }
+
+/* Hide scrollbar but allow scrolling */
+.sidebar-scrollable {
+    overflow-y: auto;
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer/Edge */
+}
+
+/* WebKit Browsers (Chrome, Safari) */
+.scrollable::-webkit-scrollbar {
+    display: none;
+}
+
+.sidebarLeft {
+    background: rgba(108, 117, 125, 0.75)
+}
+
